[package]
name = "archer_simulator_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"]}
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }
bevy-inspector-egui = "0.18.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

